--- a/app/web/views/users/cameras/camera_view.erb
+++ b/app/web/views/users/cameras/camera_view.erb
@@ -8,7 +8,7 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="streamList">
-            <img class="img-responsive" src="/img/rememberance_refr.jpg" width="450px" >
+            <img evercam="<%= @camera.exid -%>" src="" width="450px" height="450px" >
           </div>
         </div>
         <div class="col-lg-6">
@@ -16,12 +16,18 @@
           
             <div class="right_container">
               <div class="online">
-                <h4>Remembrance Cam</h4>
+                <h4><%= @camera.name -%></h4>
                 <div class="positionTest">
-                  <p><i class="fa fa-1x fa-plus-circle icon-align-center"></i>Online</p>
+                  <% if @camera.is_online == true %>
+                  <p class="online"><i class="fa fa-1x fa-plus-circle icon-align-center"></i>Online</p>
+                  <% elsif @camera.is_online == false %>
+                  <p class="offline"><i class="fa fa-1x fa-minus-circle icon-align-center"></i>Offline</p>
+                  <% else %>
+                  <p class="unknown"><i class="fa fa-1x fa-adjust icon-align-center"></i>Unknown</p>
+                  <% end %>
                 </div>
               </div>
-              <div class="camAddress">
+              <div class="camAddress" style="display: none">
                 <p><i class="fa fa-1x fa-map-marker icon-align-center blue"></i>Garden of Remembrance, Parnell Square, Dublin 1.</p>
               </div>
               <div class="Refresh">
@@ -29,6 +35,10 @@
               </div>
               <div class="settingsButton">
                 <button class="btn btn-primary btn-md" data-toggle="modal" data-target="#myModal">SETTINGS</button>
+              </div>
+
+              <div class="urls">
+
               </div>
             </div>
 
@@ -94,80 +104,6 @@
   </div>
 
   <!-- Add Camera Form -->
-  
-  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 class="modal-title" id="myModalLabel">Settings:</h4>
-        </div>
-        
-        <div class="modal-body">
 
-          <div class="addCamera_container">
-            <form class="form-horizontal" role="form">
-              <div class="form-group">
-                <label for="inputEmail3" class="col-sm-3 control-label">Camera Name:</label>
-                <div class="col-sm-8">
-                  <input type="text" class="form-control" id="inputArea" placeholder="Camera Name">
-                </div>
-              </div>
-              
-              <div class="form-group">
-                <label for="inputEmail3" class="col-sm-3 control-label">Camera ID:</label>
-                <div class="col-sm-8">
-                  <input type="text" class="form-control" id="inputArea" placeholder="Camera ID">
-                  <p>This must be unique to Evercam</p>
-                </div>
-              </div>
-                
-              <div class="form-group">
-                <label for="inputPassword3" class="col-sm-3 control-label">URL or IP:</label>
-                <div class="col-sm-8">
-                  <input type="text" class="form-control" id="inputArea" placeholder="Public IP / Dydns">
-                  <p>e.g. 149.237.190.68 - or - test.dydns.com</p>
-                </div>
-              </div>
-              
-              <div class="form-group">
-                <label for="inputEmail3" class="col-sm-3 control-label">Time Zone:</label>
-                <div class="col-sm-8">
-                  <%= partial 'layouts/_timezones'.to_sym %>
-                </div>
-              </div>
-           
-              <div class="form-group" style="display: none">
-                <label for="inputPassword3" class="col-sm-3 control-label">Credentials:</label>
-                  <div class="col-sm-4">
-                    <input type="text" class="form-control" id="inputArea" placeholder="Username">
-                  </div>
-                  <div class="col-sm-4">
-                    <input type="Password" class="form-control" id="inputArea" placeholder="Password">
-                  </div>
-              </div>
-              
-              <div class="form-group" style="display: none">
-                <label for="inputPassword3" class="col-sm-3 control-label">Camera Ports:</label>
-                <div class="col-sm-4">
-                  <input type="text" class="form-control" id="inputArea" placeholder="HTTP Port">
-                  <p>Default: 80</p>
-                </div>
-                <div class="col-sm-4">
-                  <input type="text" class="form-control" id="inputArea" placeholder="RTSP Port">
-                  <p>Default: 554</p>
-                </div>
-              </div>
-            </form>
-          </div>
-          
-        </div>
-          
-        <div class="modal-footer">
-          <button type="button" class="btn btn-primary">ADD</button>
-        </div>
-        
-      </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
-  </div><!-- /.modal -->
+  <%= partial 'users/cameras/camera_modal'.to_sym %>
 </div>
