--- a/app/web/views/contact.erb
+++ b/app/web/views/contact.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-10 col-sm-offset-1">
-      <h3>Contact Us</h3>
+      <h3 class="ec">Contact Us</h3>
       <div class="contactform_container">
         <form method="POST" class="form-horizontal" role="form">
           <div class="form-group">
