--- a/app/web/views/index.erb
+++ b/app/web/views/index.erb
@@ -81,7 +81,7 @@
         <div class="signup_form">
           <div class="col-sm-10 col-sm-offset-1">
             <form method='POST' action='/interested' class="form-inline" role="form">
-              <h3>Interested? Sign Up Today&hellip;</h3>
+              <h3 class="ec">Interested? Sign Up Today&hellip;</h3>
                 <div class="form-group">
                   <input type="email" class="form-control" name='email' id="email" placeholder="Your email">
                 </div>
