--- a/app/web/views/users/user_view.erb
+++ b/app/web/views/users/user_view.erb
@@ -35,7 +35,7 @@
                 <% end %>
               </div>
             </div>
-            <div class="camAddress" style="display: none">
+            <div class="camAddress hidden">
               <p><i class="fa fa-1x fa-map-marker icon-align-center blue"></i>Garden of Remembrance, Parnell Square, Dublin 1.</p>
             </div>
             <div class="url">
@@ -64,7 +64,6 @@
   <br/><br/><!-- Temp Line Breaks -->
 
     <!-- Add Camera Form -->
-
     <%= partial 'users/cameras/camera_modal'.to_sym %>
 </div>
 </div>
