--- a/app/web/views/connect/index.erb
+++ b/app/web/views/connect/index.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="connect_container">
-    <h3>Please try our App to help scan your <br/>network and get your cameras connected.</h3>
+    <h3 class="ec">Please try our App to help scan your <br/>network and get your cameras connected.</h3>
     <a href="https://play.google.com/store/apps/details?id=com.evercamdiscover&hl=en"><img src="/img/googleplay.png" class="img-responsive"></a>
-    <h3>More Coming Soon...</h3>
+    <h3 class="ec">More Coming Soon...</h3>
   </div><!-- end connect_container -->
 </div>
 
