adding password reset functionality and fixing Android app links

--- a/app/web/views/connect/index.erb
+++ b/app/web/views/connect/index.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="connect_container">
     <h3>Please try our App to help scan your <br/>network and get your cameras connected.</h3>             
-    <a href="https://play.google.com/store/apps/details?id=io.evercam.connect&hl=en"><img src="/img/googleplay.png" class="img-responsive"></a>
+    <a href="https://play.google.com/store/apps/details?id=io.evercam.connect"><img src="/img/googleplay.png" class="img-responsive"></a>
     <h3 class="ec">More Coming Soon...</h3>
   </div><!-- end connect_container -->
 </div>
