--- a/app/web/views/users/cameras/camera_view.erb
+++ b/app/web/views/users/cameras/camera_view.erb
@@ -49,7 +49,7 @@
               </div>
 
               <h3>URLs</h3>
-              <div class="camera-endpoints">
+              <div class="cam-endpoints">
                 <% @camera.endpoints.each_with_index  do |e, i| -%>
                 <div>
                   <% if e.public? %>
