--- a/app/web/views/users/user_view.erb
+++ b/app/web/views/users/user_view.erb
@@ -5,7 +5,12 @@
     
   <!-- Button trigger modal -->
   <div class="row">
-    <div class="col-xs-3 col-xs-offset-9">
+    <div class="col-xs-2 col-xs-offset-7">
+      <div class="addButton">
+        <a class="btn btn-primary btn-md" href="/users/<%= @user.username -%>/profile">Profile</a>
+      </div>
+    </div>
+    <div class="col-xs-3">
       <div class="addButton">
         <button class="btn btn-primary btn-md" data-toggle="modal" data-target="#myModal">Add Camera</button>
       </div>
