--- a/app/web/views/users/user_profile.erb
+++ b/app/web/views/users/user_profile.erb
@@ -17,7 +17,13 @@
         <input type="email" value="<%= @user.email -%>" class="form-control" id="userEmail" placeholder="Enter email">
       </div>
 
-      <button type="submit" class="btn btn-default">Save</button>
+      <div class="alert alert-danger" id="userProfileErrors" style="display: none">
+        <strong>Error!</strong> <span class="alert-content"></span>
+      </div>
+
+      <button type="submit" class="btn btn-default" disabled="disabled">Save</button>
+      <img src="/img/ajax-loader.gif" id="loader" style="display: none">
+      <span class="label label-success" id="success" style="display: none">Success</span>
     </form>
 
   </div>
@@ -27,9 +33,45 @@
 <% content_for :scripts do %>
 <script>
   $(function() {
-    $('#userProfile').on('submit', function(e) {
-      e.preventDefault();
-      $('#userProfileErrors').hide();
+
+    Evercam.User.by_login('<%= @user.username -%>')
+    .then(function(user) {
+
+      $('#userProfile').on('submit', function(e) {
+        e.preventDefault();
+        $('#userProfileErrors').hide();
+        $('#loader').show();
+
+        var toUpdate= [];
+        if (user.data.forename !== $('#userForename').val()) {
+          user.data.forename = $('#userForename').val();
+          toUpdate.push('forename');
+        }
+        if (user.data.lastname !== $('#userLastname').val()) {
+          user.data.lastname = $('#userLastname').val();
+          toUpdate.push('lastname');
+        }
+        if (user.data.email !== $('#userEmail').val()) {
+          user.data.email = $('#userEmail').val();
+          toUpdate.push('email');
+        }
+        user.update(toUpdate)
+        .done(function() {
+          console.log('updated');
+          $('#success').fadeIn().delay(2000).fadeOut('slow');
+            })
+        .fail(function(jqXHR, textStatus, errorThrown) {
+          console.log( errorThrown + ' - ' + jqXHR.responseJSON.message);
+          $('#userProfileErrors').find('.alert-content').text(jqXHR.responseJSON.message);
+          $('#userProfileErrors').show();
+        })
+        .always(function() {
+          $('#loader').hide();
+        });
+
+      });
+
+      $('button[type="submit"]').removeAttr('disabled');
 
     });
 
