--- a/app/web/views/signup.erb
+++ b/app/web/views/signup.erb
@@ -3,31 +3,31 @@
 		<div class ="signup"><% @title = 'Signup' %> 
 		<h1>Create an account</h1>
 			<div class="row">
-				<div class="col-sm-10 col-sm-offset-1">
+				<div class="col-sm-10 col-sm-offset-1">					
 					<form method="POST" role="form">
 						<div class="form-group">
 							<div class="form-inline">
 								<div class="form-group col-xs-6">
 									  <label for="forename">Forename</label>
-									  <%= input(:forename, :text, :required, placeholder: 'Forename') %>
+									  <%= input(:forename, :text, :required, placeholder: 'Forename', value: session[:signup][:forename]) %>
 								</div>
 								<div class="form-group col-xs-6">
 									<label for="lastname">Lastname</label>
-									<%= input(:lastname, :text, :required, placeholder: 'Lastname') %>
+									<%= input(:lastname, :text, :required, placeholder: 'Lastname', value: session[:signup][:lastname]) %>
 								</div>
 							</div>
 						</div>
 						<div class="form-group">
 							<label for="country">Country</label>
-							<%= select(:country, @countries.map { |c| [c.iso3166_a2, c.name] }, :required) %>
+							<%= select(:country, @countries.map { |c| [c.iso3166_a2, c.name] }, :required, value: session[:signup][:country]) %>
 						</div>
 						<div class="form-group">
 						  <label for="username">Username</label>
-						  <%= input(:username, :text, :required, placeholder: 'Username') %>
+						  <%= input(:username, :text, :required, placeholder: 'Username', value: session[:signup][:username]) %>
 						</div>
 						<div class="form-group">
 						  <label for="email">Email</label>
-						  <%= input(:email, :text, :required, placeholder: 'Email') %>
+						  <%= input(:email, :text, :required, placeholder: 'Email', value: session[:signup][:email]) %>
 						</div>
 						<input class="btn btn-primary pull-right" type="submit" value="Sign up" id="submit"></input>
 					</form>
